--- a/src/app/pages/start-main/start-main.component.html
+++ b/src/app/pages/start-main/start-main.component.html
@@ -28,9 +28,12 @@
   <!-- First Line (Input & Button) -->
   <div class="flex justify-between gap-x-6">
     <div class="relative text-gray-500 focus-within:text-red-600 dark:focus-within:text-red-400 w-full">
-      <input class="block w-full !pl-9 mt-1 text-sm text-black dark:text-gray-300 dark:border-gray-600
-    dark:bg-gray-700 focus:border-red-400 focus:outline-none focus:shadow-outline-red input-box
-    dark:focus:shadow-outline-gray" placeholder="Name des Bahnhofs..">
+      <input [formControl]="trainStationForm" class="block w-full !pl-9 mt-1 text-sm text-black dark:text-gray-300
+                                                    dark:border-gray-600 dark:bg-gray-700 focus:border-red-400
+                                                    focus:outline-none focus:shadow-outline-red input-box
+                                                    dark:focus:shadow-outline-gray"
+             placeholder="Name des Bahnhofs.." required
+             [ngClass]="trainStationForm.invalid && invalidTrainstation ? '!border-red-600 dark:border-red-600' : ''">
       <div class="absolute inset-y-0 flex items-center ml-2 pointer-events-none">
         <svg class="w-5 h-5 mt-1" aria-hidden="true" fill="#6b7280" xmlns="http://www.w3.org/2000/svg"
              viewBox="0 0 24 24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
@@ -39,7 +42,8 @@
       </div>
     </div>
     <div>
-      <button class="flex items-center justify-between px-4 py-2 text-sm font-medium text-white transition-colors
+      <button type="submit" (click)="getTrainstationData()"
+              class="flex items-center justify-between px-4 py-2 text-sm font-medium text-white transition-colors
         duration-150 bg-red-600 border border-transparent rounded-lg active:bg-red-600 hover:bg-red-700
         focus:outline-none focus:shadow-outline-red cp-0.5 h-full mt-0.5">
         <svg class="w-4 h-4 mr-2 -ml-1" fill="none" stroke="#FFFFFF" aria-hidden="true" viewBox="0 0 488.4 488.4"
@@ -58,27 +62,31 @@ S381.9,104.65,381.9,203.25z"/>
   <div class="relative flex flex-nowrap justify-between">
     <div class="mt-6 ml-2 flex justify-start gap-x-8 w-full">
       <!-- Date Picker -->
-      <button class="flex w-auto flex-col text-gray-600 dark:text-gray-400 -ml-2 hover:bg-gray-700 hover:dark:bg-white
-                     hover:dark:bg-opacity-5 hover:bg-opacity-5 rounded-lg pl-2">
-        <div class="flex">
-         <svg class="w-5 h-5 mr-2 mt-0.5" fill="none" stroke="#6b7280" aria-hidden="true" viewBox="0 0 24 24"
-                     xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-           <path d="M3 10H21M7 3V5M17 3V5M6.2 21H17.8C18.9201 21 19.4802 21 19.908 20.782C20.2843 20.5903 20.5903
+      <div class="relative">
+        <button class="flex w-auto flex-col text-gray-600 dark:text-gray-400 -ml-2 hover:bg-gray-700 hover:dark:bg-white
+                     hover:dark:bg-opacity-5 hover:bg-opacity-5 rounded-lg pl-2" (click)="openDatepicker();">
+          <div class="flex">
+            <svg class="w-5 h-5 mr-2 mt-0.5" fill="none" stroke="#6b7280" aria-hidden="true" viewBox="0 0 24 24"
+                 xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M3 10H21M7 3V5M17 3V5M6.2 21H17.8C18.9201 21 19.4802 21 19.908 20.782C20.2843 20.5903 20.5903
            20.2843 20.782 19.908C21 19.4802 21 18.9201 21 17.8V8.2C21 7.07989 21 6.51984 20.782 6.09202C20.5903 5.71569
            20.2843 5.40973 19.908 5.21799C19.4802 5 18.9201 5 17.8 5H6.2C5.0799 5 4.51984 5 4.09202 5.21799C3.71569
            5.40973 3.40973 5.71569 3.21799 6.09202C3 6.51984 3 7.07989 3 8.2V17.8C3 18.9201 3 19.4802 3.21799
            19.908C3.40973 20.2843 3.71569 20.5903 4.09202 20.782C4.51984 21 5.07989 21 6.2 21Z" />
-         </svg>
-          <h2 class="-ml-1 pl-1.5 whitespace-nowrap leading-6 font-bold" id="date-pick">Heute, ab 14:52</h2>
-          <svg class="mt-1.5 w-3.5 h-3.5 mx-2" viewBox="0 0 16 16" fill="#dc2626"  fill-rule="evenodd" aria-hidden="true"
-               xmlns="http://www.w3.org/2000/svg" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+            </svg>
+            <h2 class="-ml-1 pl-1.5 whitespace-nowrap leading-6 font-bold" id="date-pick">{{ currentDate }}</h2>
+            <svg class="mt-1.5 w-3.5 h-3.5 mx-2" viewBox="0 0 16 16" fill="#dc2626"  fill-rule="evenodd" aria-hidden="true"
+                 xmlns="http://www.w3.org/2000/svg" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
               <g transform="rotate(45 1254.793 524.438)">
                 <path d="M11.532 1048.341H9.536v-9h-9v-2h11z" />
               </g>
-          </svg>
-        </div>
-        <span class="ml-7.5">Filtern nach Datum</span>
-      </button>
+            </svg>
+          </div>
+          <span class="ml-7.5">Filtern nach Datum</span>
+        </button>
+
+        <input class="absolute left-0 top-full -mt-6 -z-10 w-full" id="inline-datepicker" inline-datepicker />
+      </div>
 
       <!-- Route Planner -->
       <button class="flex w-56 flex-col text-gray-600 dark:text-gray-400 -ml-2 hover:bg-gray-700 hover:dark:bg-white
